# Linux

./: CMakeLists.txt  README.md
QDBus/: CMakeLists.txt
QDBus/Client/: CMakeLists.txt
QDBus/Client/src/: DBusClient.cpp  DBusClient.h  main.cpp
QDBus/Server/: CMakeLists.txt
QDBus/Server/src/: ServerObject.cpp  ServerObject.h  main.cpp
cmake/: CMakeLists.txt
cmake/lib_static/: CMakeLists.txt
cmake/option_library/: CMakeLists.txt  main.cpp
cmake/option_library/MathFunctions/: mysqrt.cpp
cmake/version/: CMakeLists.txt  main.cpp
devicemanager/调研/: 网卡调研.doc  蓝牙调研.doc  音频设备调研.doc
devicemanager/调研/blue/: BTTool.cpp  BTTool.h  CMakeLists.txt  DeviceBluetooth.cpp  DeviceBluetooth.h  main.cpp
devicemanager/调研/eth/: CMakeLists.txt  main.cpp
plugin/: CMakeLists.txt
plugin/Main/: CMakeLists.txt
plugin/Main/src/: main.cpp
plugin/Main/src/PluginA/: PluginInterfaceA.cpp  PluginInterfaceA.h
plugin/Main/src/PluginB/: PluginBManager.cpp  PluginBManager.h  PluginInterfaceB.cpp  PluginInterfaceB.h
plugin/PluginA/: CMakeLists.txt
plugin/PluginA/src/: PluginAOne.cpp  PluginAOne.h
plugin/PluginB/: CMakeLists.txt
plugin/PluginB/PluginB_One/: CMakeLists.txt  pluginb_one.json
plugin/PluginB/PluginB_One/src/: PluginBOne.cpp  PluginBOne.h
plugin/PluginB/PluginB_Two/: CMakeLists.txt  pluginb_two.json
plugin/PluginB/PluginB_Two/src/: PluginBTwo.cpp  PluginBTwo.h
process/: CMakeLists.txt
process/IPC/: CMakeLists.txt
process/IPC/mmap/: CMakeLists.txt  main.cpp
process/IPC/pipe/: CMakeLists.txt  main.cpp
process/build-IPC-unknown-Debug/: Linux.cbp
process/build-IPC-unknown-Debug/pipe/: pipe  pipe.cbp
process/exec/: CMakeLists.txt  main.cpp
process/fork/: CMakeLists.txt  main.cpp
process/wait/: CMakeLists.txt  main.cpp
shell/001_变量/: 004_shift_variable.sh  005_variable_quote.sh  01_变量的定义和使用.sh  02_命令替换.sh  03_位置参数_特殊参数.sh  04_数据.sh  05_关联数组.sh  06_变量的作用域.sh
shell/002_转义字符/: 006_转义字符.sh
shell/003_if/: 01_if和双小括号.sh  02_if_grep.sh
shell/004_字符串/: 01_字符串的基本使用.sh
shell/005_内建命令/: 01_内建命令.sh
shell/006_数学计算/: 01_数学计算.sh
shell/variable/: 001_SpecialCharacters.sh  002_variable.sh  003_position_variable.sh
sigaction/: CMakeLists.txt  main.cpp
signal/: CMakeLists.txt
signal/generateSignal/: CMakeLists.txt  main.cpp
signal/sigaction/: main.cpp
signal/signal/: CMakeLists.txt
signal/signal_set/: CMakeLists.txt  main.cpp
thread/: CMakeLists.txt
thread/create/: main.cpp
thread/pthread_attri/: CMakeLists.txt  main.cpp
thread/pthread_cancel/: CMakeLists.txt  main.cpp
thread/pthread_create/: CMakeLists.txt
thread/pthread_detach/: CMakeLists.txt  main.cpp
thread/pthread_exit/: CMakeLists.txt  main.cpp
thread/pthread_join/: CMakeLists.txt  main.cpp
thread/pthread_mutex/: CMakeLists.txt  main.cpp
